--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,6 +25,6 @@ jobs:
         env:
           GOOGLE_PROJECT: ${{ secrets.GOOGLE_PROJECT }}
         run: |
-          gcloud auth asia-southeast2-docker.pkg.dev
+          gcloud auth configure-docker asia-southeast2-docker.pkg.dev
           docker build -t asia-southeast2-docker.pkg.dev/$GOOGLE_PROJECT/latihan1/nginx:latest . 
-          docker push asia-southeast2-docker.pkg.dev/$GOOGLE_PROJECT/latihan1/nginx:latest .
+          docker push asia-southeast2-docker.pkg.dev/$GOOGLE_PROJECT/latihan1/nginx:latest
