--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,6 +1,6 @@
 # @format
 
-name: Deploy Latihan Nginx
+name: Deploy Nginx
 
 on:
   push:
@@ -9,7 +9,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: windows-latest # Untuk menjalankan di lingkungan Windows
+    runs-on: windows-latest
     steps:
       - name: code checkout
         uses: actions/checkout@v2
@@ -21,10 +21,10 @@ jobs:
           service_account_key: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
           export_default_credentials: true
 
-      - name: Build and Push Docker Image
+      - name: build and push the docker image
         env:
           GOOGLE_PROJECT: ${{ secrets.GOOGLE_PROJECT }}
         run: |
-          gcloud auth configure-docker asia-southeast2-docker.pkg.dev
-          docker build -t asia-southeast2-docker.pkg.dev/$GOOGLE_PROJECT/latihan1/nginx:latest .
-          docker push asia-southeast2-docker.pkg.dev/$GOOGLE_PROJECT/latihan1/nginx:latest
+          gcloud auth configure-docker us-central1-docker.pkg.dev
+          docker build -t us-central1-docker.pkg.dev/$GOOGLE_PROJECT/latihan1/nginx:latest .
+          docker push us-central1-docker.pkg.dev/$GOOGLE_PROJECT/latihan1/nginx:latest
