--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -28,3 +28,7 @@ jobs:
           gcloud auth configure-docker us-central1-docker.pkg.dev
           docker build -t us-central1-docker.pkg.dev/$GOOGLE_PROJECT/latihan1/nginx:latest .
           docker push us-central1-docker.pkg.dev/$GOOGLE_PROJECT/latihan1/nginx:latest
+
+
+      - name: Debug
+        run: ls -R
