--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,8 +26,8 @@ jobs:
           GOOGLE_PROJECT: ${{ secrets.GOOGLE_PROJECT }}
         run: |
           gcloud auth configure-docker us-central1-docker.pkg.dev
-          docker build -t us-central1-docker.pkg.dev/$GOOGLE_PROJECT/latihan1/nginx:latest .
-          docker push us-central1-docker.pkg.dev/$GOOGLE_PROJECT/latihan1/nginx:latest
+          docker build -t us-central1-docker.pkg.dev/capstone-deploy-408008/backend-api/nginx:latest .
+          docker push us-central1-docker.pkg.dev/capstone-deploy-408008/backend-api/nginx:latest
 
       - name: Debug
         run: ls -R
